# nugu-epd

./: CMakeLists.txt  README.md  nugu-epd.map  nugu-epd.pc.in
.github/workflows/: merged.yaml  pull_request.yaml  release.yaml
packaging/bionic/: changelog  control  rules
packaging/focal/: changelog  rules
packaging/jammy/: changelog
packaging/noble/: changelog  libnugu-epd.lintian-overrides
src/: CMakeLists.txt  endpoint_detector.c  speex.c
test/: CMakeLists.txt  epd_process.c  epd_process.h  epd_util.c  epd_util.h  main.cc
